--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,6 @@
     <title>MY WEBPAGE</title>
   </head>
   <body>
-    hello , world, hello from the other side,
+    hello , world !hello from the other side,
   </body>
 </html>
