--- a/hello.html
+++ b/hello.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MY WEBPAGE</title>
+    <title>Bazicha Atfaal</title>
   </head>
   <body>
     hy there
-    i am waiting for you
-    What you are doing 
+    Welccome to the Bazicha atfaaal
+    its a page about Poetry , Culture , Arts and History
   </body>
 </html>
