--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
     <title>Bazicha Atfaal</title>
   </head>
   <body>
-    <bold>hy there </bold>
+    <b> hy there </b>
     Welccome to the Bazicha atfaaal
     its a page about Poetry , Culture , Arts and History
   </body>
