--- a/hello.html
+++ b/hello.html
@@ -4,8 +4,8 @@
     <title>Bazicha Atfaal</title>
   </head>
   <body>
-    <b> hy there </b>
-    Welccome to the Bazicha atfaaal
-    its a page about Poetry , Culture , Arts and History
+    <h1><b> hy there </b></h1>
+  <h2>Welccome to the Bazicha atfaaal</h2>
+<h3>its a page about Poetry , Culture , Arts and History</h3>
   </body>
 </html>
