--- a/hello.html
+++ b/hello.html
@@ -4,8 +4,17 @@
     <title>Bazicha Atfaal</title>
   </head>
   <body>
-    <h1><b> hy there </b></h1>
-  <h2>Welccome to the Bazicha atfaaal</h2>
-<h3>its a page about Poetry , Culture , Arts and History</h3>
+    an unordered list:
+    <ul>
+      <l1> one item </l1>
+      <l2> one item </l2>
+      <l3> one item </l3>
+    </ul>
+    an ordered list:
+    <ol>
+      <l1> one item </l1>
+      <l2> one item </l2>
+      <l3> one item </l3>
+    </ol>
   </body>
 </html>
