--- a/hello.html
+++ b/hello.html
@@ -6,15 +6,15 @@
   <body>
     an unordered list:
     <ul>
-      <l1> one item </l1>
-      <l2> one item </l2>
-      <l3> one item </l3>
+      <li> one item </li>
+      <li> one item </li>
+      <li> one item </li>
     </ul>
     an ordered list:
     <ol>
-      <l1> one item </l1>
-      <l2> one item </l2>
-      <l3> one item </l3>
+      <li> one item </li>
+      <li> one item </li>
+      <li> one item </li>
     </ol>
   </body>
 </html>
